@@ -1,3 +1,10 @@
+Wed Sep 14 09:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>
+
+        * tests/Bug_2234_Regression/client.cpp
+        * tests/Bug_2234_Regression/server.cpp
+
+        Correct minor fussy compiler grips for some gcc platforms.
+
 Wed Sep 14 08:41:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
 
         * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
